# neos

./: .flake8  .gitignore  .pre-commit-config.yaml  00_core.ipynb  00_models.ipynb  00_nn.ipynb  01_hists.ipynb  01_makers.ipynb  01_stats.ipynb  02_data.ipynb  02_transforms.ipynb  03_fit.ipynb  03_models.ipynb  04_cls.ipynb  04_transforms.ipynb  05_fit.ipynb  06_cls.ipynb  CITATION.cff  CONTRIBUTING.md  ForReal.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  applying_neos.md  assets  cls_nn_experiments.ipynb  debug.py  demo.ipynb  demo_kde_pyhf-Copy1.ipynb  demo_training.ipynb  funnyscipy.py  index.ipynb  jax_error_issue.ipynb  jax_issue_2346.ipynb  kde_experiment.ipynb  kde_pyhf.ipynb  multi_bin.ipynb  (+7 more)
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  main.yml
binder/: postBuild
demos/: demo_training.ipynb
docs/: ForReal.html  Untitled.html  _config.yml  cls.html  cls_nn_experiments.html  conf.py  data.html  demo_kde.html  demo_kde_pyhf.html  demo_sigmoid.html  demo_softmax.html  demo_training.html  fit.html  hists.html  index.html  infer.html  jax_error_issue.html  jax_issue_2346.html  jax_nn.html  kde_gradient studies.html  makers.html  models.html  nn.html  sidebar.json  smooth.html  stats.html  talk_slides.html  transforms.html
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
envfs/: pyvenv.cfg
examples/: binning.ipynb  cuts.ipynb  diffable_histograms.ipynb  requirements.txt  simple-analysis-optimisation.ipynb
fullstream/: _nbdev.py  cls.py  fit.py  models.py  nn.py  stats.py  transforms.py
nbs/: 00_data.ipynb  00_models.ipynb  01_makers.ipynb  01_smooth.ipynb  02_makers.ipynb  02_transforms.ipynb  03_fit.ipynb  03_transforms.ipynb  04_cls.ipynb  04_fit.ipynb  05_infer.ipynb  99_models.ipynb  Untitled.ipynb  demo_2models.ipynb  demo_kde.ipynb  demo_kde_pyhf.ipynb  demo_sigmoid.ipynb  demo_softmax copy.ipynb  demo_softmax.ipynb  demo_softmax_pyhf.ipynb  index.ipynb  kde_gradient studies.ipynb  models_docs.ipynb  neos  talk.ipynb  talk_slides.ipynb  test.py  unused_tests.py
neos/: _nbdev.py  cls.py  data.py  fit.py  hists.py  infer.py  makers.py  models.py  nn.py  smooth.py  transforms.py
src/neos/: __init__.py  data.py  losses.py  makers.py  models.py  nn_observable.py  pipeline.py  top_level.py  utils.py
src/neos/examples/: __init__.py  nn_pyhf_cls.py
src/neos/experiments/: __init__.py  nn_observable.py
tests/: test_package.py
