[metadata]
name = neos
description = Neural (or nice) end-to-end optimised statistics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gradhep/neos
author = Nathan Simpson
author_email = phinate@protonmail.com
maintainer = Nathan Simpson
maintainer_email = phinate@protonmail.com
license = Apache-2.0
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://neos.readthedocs.io/
    Bug Tracker = https://github.com/gradhep/neos/issues
    Discussions = https://github.com/gradhep/neos/discussions
    Changelog = https://github.com/gradhep/neos/releases

[options]
packages = find:
install_requires =
    relaxed>=0.0.5
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
    pytest>=6
    pytest-cov>=2.6.1
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.0.33
    sphinx_copybutton
test =
    pre-commit
    pytest>=6
    pytest-cov>=2.6.1
