[metadata]
name = neos
description = UpUpstream optimization of a neural net summary statistic with respect to downstream inference goals.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gradhep/neos
author = Nathan Simpson
author_email = n.s@cern.ch
maintainer = Nathan Simpson
maintainer_email = n.s@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://neos.readthedocs.io/
    Bug Tracker = https://github.com/gradhep/neos/issues
    Discussions = https://github.com/gradhep/neos/discussions
    Changelog = https://github.com/gradhep/neos/releases

[options]
packages = find:
install_requires =
    celluloid
    matplotlib
    relaxed>=0.2.0
    scikit-learn
    typing-extensions>=3.7;python_version<'3.8'
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
docs =
    Sphinx~=3.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
test =
    pytest>=6

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
